CD/seq/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq-deployment
  labels:
    service: seq
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      service: seq
  template:
    metadata:
      labels:
        service: seq
    spec:
      containers:
      - name: seq
        image: datalust/seq:latest
        ports:
        - containerPort: 5341
          name: http
        - containerPort: 80
          name: web
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
            limits:
              memory: "2Gi"
              cpu: "2"
            requests:
              memory: "1Gi"
              cpu: "1"
