CD/seq/service.yml
apiVersion: v1
kind: Service
metadata:
  name: seq-service
  namespace: default
spec:
  selector:
    service: seq
  ports:
  - name: ingest
    protocol: TCP
    port: 5341
    targetPort: 5341
  - name: ui
    protocol: TCP
    port: 8090
    targetPort: 80
  type: ClusterIP
