CD/seq/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: seq-networkpolicy
  namespace: default
spec:
  podSelector:
    matchLabels:
      service: seq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: catalog
    ports:
    - protocol: TCP
      port: 5341
    - protocol: TCP
      port: 80
